--- a/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
@@ -94,7 +94,8 @@
              <input type="checkbox" ng-model="i.selected" ng-show="i.status!='cancelled'&&i.status!='returned'">
           </div>
           <div class="col-md-4 col-sm-4 hidden-xs">
-            {{i.productName.slice(0,25)}}
+            <span ng-if="i.prodVar==undefined"> {{i.productName.slice(0,25)}} {{i.product.product.howMuch}}{{i.product.product.unit | getUnit}}</span>
+            <span ng-if="i.prodVar"> {{i.productName.slice(0,25)}} {{i.prodVar[0].unitPerpack * i.product.product.howMuch}}{{i.product.product.unit | getUnit}} </span>
           </div>
           <div class="col-md-1 col-sm-1 hidden-xs">
             {{i.qty}}
