--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -143,8 +143,12 @@
                     <img style="width: 70%;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
                   </div>
                   <div class="col-md-3" style="height:100px;padding-top: 50px;">
-                    <h5 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h5>
-                    <h5 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h5>
+                    <!-- <h5 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h5>
+                    <h5 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h5> -->
+
+                    <h5 ng-if="c.prod_var==undefined" style="margin:0px;  height:50px;">{{c.product.product.name}} {{c.product.product.howMuch}}{{c.product.product.unit | getUnit}}</h5>
+                    <h5 ng-if="c.prod_var" style="margin:0px;  height:50px;">{{c.product.product.name}} {{c.prod_var.unitPerpack * c.product.product.howMuch }}{{c.product.product.unit | getUnit}}</h5>
+
                   </div>
                   <div class="col-md-3">
                     <div class="row container-fluid" ng-if="c.prodSku==c.product.product.serialNo">
