--- a/ecommerce/static/ngTemplates/app.ecommerce.orders.cancelModalWindow.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.orders.cancelModalWindow.html
@@ -17,7 +17,11 @@
     </div>
     <div class="row" ng-repeat="i in items">
       <div class="col-md-6 col-xs-6">
-        {{i.productName.slice(0,30)}}
+        <!-- <span></span> {{i.productName.slice(0,30)}}
+        <span></span>  {{i.prodVar}} -->
+
+        <span ng-if="i.prodVar==undefined"> {{i.productName.slice(0,30)}} {{i.product.product.howMuch}}{{i.product.product.unit | getUnit}}</span>
+        <span ng-if="i.prodVar"> {{i.productName}} {{i.prodVar[0].unitPerpack * i.product.product.howMuch}}{{i.product.product.unit | getUnit}} </span>
       </div>
       <div class="col-md-3 col-xs-3">
         {{i.qty}}
