--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
@@ -75,7 +75,8 @@
             </div>
 
             <div class="row">
-              <h3> {{pData.productName}} </h3>
+              <h3 ng-if="pData.prodVar==undefined"> {{pData.productName}} {{pData.product.product.howMuch}}{{pData.product.product.unit}}</h3>
+              <h3 ng-if="pData.prodVar"> {{pData.productName}} {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch}}{{pData.product.product.unit}} </h3>
             </div>
             <div class="row">
               <div class="col-md-2">
