--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -195,7 +195,7 @@
             <uib-tab-heading>
               Email <i  class="fa fa-address-book"></i>
             </uib-tab-heading>
-            <!-- <generic-Table callback-Fn="tableAction" data="dataVal.emailData" config-Obj="{{emailConfig}}"></generic-Table> -->
+            <generic-Table callback-Fn="emailtableAction" data="dataVal.emailData" config-Obj="{{emailConfig}}"></generic-Table>
           </uib-tab>
           </uib-tabset>
       </div>
