--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -13,10 +13,10 @@
       </a>
 
 
-      <a class="navbar-brand" style="margin-left:5px;">
+      <!-- <a class="navbar-brand" style="margin-left:5px;">
         <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
-      </a>
-      <div class="navbar-brand" style="color:white;"><i class="fa fa-angle-right"></i> {{serviceName}}</div>
+      </a> -->
+      <div class="navbar-brand" style="color:white;">{{serviceName}}</div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navBar" style="height:5vh;background-color: var(--themeMain)">
