--- a/ecommerce/static/ngTemplates/app.ecommerce.account.cart.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.cart.item.html
@@ -11,9 +11,9 @@
           <!-- <h5 ng-if="data.product.product.name.length>30" style="margin:0px;  height:50px;">{{data.product.product.name.slice(0,30)}}...</h5>
           <h5 ng-if="data.product.product.name.length<=30" style="margin:0px;  height:50px;">{{data.product.product.name}}</h5> -->
 
-          <h5 ng-if="data.prod_var==undefined" style="margin:0px;  height:50px;">{{data.product.product.name}} {{data.product.product.howMuch}}{{data.product.product.unit | getUnit}}</h5>
-          <h5 ng-if="data.prod_var" style="margin:0px;  height:50px;">{{data.product.product.name}} {{data.prod_var.unitPerpack * data.product.product.howMuch }}{{data.product.product.unit | getUnit}}</h5>
-          
+          <h5 ng-if="data.prod_var==undefined" style="margin:0px;  height:50px;">{{data.product.product.name}} {{data.product.product.howMuch | convertUnit: data.product.product.unit}}</h5>
+          <h5 ng-if="data.prod_var" style="margin:0px;  height:50px;">{{data.product.product.name}} {{data.prod_var.unitPerpack * data.product.product.howMuch | convertUnit: data.product.product.unit}}</h5>
+
           <span style="font-size:15px;" > Price : </span>
           <span ng-if="data.prodSku==data.product.product.serialNo"  style="font-size:15px;padding-left:10px">
             <i class="fa fa-inr"></i>{{data.product.product.discountedPrice.toFixed(2)}}
