--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.form.listing.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.form.listing.html
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-4 col-xs-6" style="padding:10px;" ng-repeat= "f in data.form.files">
 
-            <!-- <div class="container" style="position:relative; width:100%; padding:20px;" ng-mouseover="deleteObjOption=true" ng-mouseleave="deleteObjOption=false">
+            <div class="container" style="position:relative; width:100%; padding:20px;" ng-mouseover="deleteObjOption=true" ng-mouseleave="deleteObjOption=false">
               <span>
                 <i ng-show="deleteObjOption" ng-click = "removeMedia($index)" class="fa fa-times fa-3x" style="position:absolute;top:-5px;right:0px;text-align: center;z-index:10;cursor:pointer"></i>
               </span>
@@ -104,9 +104,10 @@
               <div ng-if="['video' , 'doc' , 'onlineVideo'].indexOf(f.mediaType) != -1">
                 <a href="{{f.link}}">{{f.link}}</a>
               </div>
-            </div> -->
-            <div ng-drag="true" ng-drag-data="f" data-allow-transform="true" style="padding:15px">
-              
+            </div>
+            <input type="number" ng-model="f.imageIndex">
+            <!-- <div ng-drag="true" ng-drag-data="f" data-allow-transform="true" style="padding:15px">
+
 
             <div class="container" style="position:relative; width:100%; padding:20px;" ng-mouseover="deleteObjOption=true" ng-mouseleave="deleteObjOption=false">
               <span>
@@ -118,7 +119,7 @@
                 <a href="{{f.link}}">{{f.link}}</a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
           </div>
       </div>
