--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white " style="position:relative;min-height:92vh;" >
+<div class=" bg-white " style="position:relative;min-height:92vh;" >
   <breadcrumb></breadcrumb>
 
   <div style="padding-right:10px;padding-left:10px;" id="dashboard">
