--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -43,8 +43,14 @@
               <i class="fa fa-inr"></i>{{list.product.discountedPrice.toFixed(2)}}
             </span>
           </span>
-          <span ng-if="list.product.serialNo!=selectedProdVar.sku">
+          <span ng-if="list.product.serialNo!=selectedProdVar.sku&&selectedProdVar.amnt == selectedProdVar.disc">
               <i class="fa fa-inr"></i>{{selectedProdVar.amnt}}
+          </span>
+          <span ng-if="list.product.serialNo!=selectedProdVar.sku&&selectedProdVar.amnt != selectedProdVar.disc" class="text-muted">
+              <strike> <i class="fa fa-inr"></i>{{selectedProdVar.amnt}} </strike> 
+          </span>
+          <span ng-if="list.product.serialNo!=selectedProdVar.sku&&selectedProdVar.amnt != selectedProdVar.disc">
+              <i class="fa fa-inr"></i>{{selectedProdVar.disc}}
           </span>
           <div>
             <div style=" padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart==0&&me.pk&&list.in_stock=='true'">
