--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -159,9 +159,11 @@
                       </div>
                     </div>
                     <div class="row container-fluid" ng-if="c.prodSku!=c.product.product.serialNo">
-                      <div class="col-md-offset-6 col-md-6" style="padding-top: 50px;">
-                        <span ng-if="c.prodVarPrice != c.prod_var.discountedPrice" style="padding-right:5px;"> <strike> <i class="fa fa-inr"></i> {{c.prodVarPrice.toFixed(2)}} </strike> </span>
-                      <span><i class="fa fa-inr"></i>{{c.prod_var.discountedPrice.toFixed(2)}}</span>
+                      <div class=" col-md-6" style="padding-top: 50px;">
+                        <span class="pull-right" ng-if="c.prodVarPrice != c.prod_var.discountedPrice"> <strike> <i class="fa fa-inr"></i> {{c.prodVarPrice.toFixed(2)}} </strike> </span>
+                      </div>
+                      <div class="col-md-6" style="padding-top: 50px;">
+                          <span><i class="fa fa-inr"></i>{{c.prod_var.discountedPrice.toFixed(2)}}</span>
                       </div>
                     </div>
                   </div>
