--- a/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.payrollinfo.html
@@ -171,17 +171,17 @@
           <div class="container-fluid">
             <div class="row text-center" style="margin-bottom:10px">
               <ul class="pager">
-                <li class="previous {{pageNo == 0? 'disabled':''}}"><a href="" ng-click="prev()"><span aria-hidden="true">&larr;</span> Prev</a></li>
-                <li class="next {{disableNext? 'disabled':''}}"><a href="" ng-click="next()">Next <span aria-hidden="true">&rarr;</span></a></li>
+                <li class="previous {{currentYear==joiningDateYear? 'disabled':''}}"><a href="" ng-click="prev()"><span aria-hidden="true">&larr;</span> Prev</a></li>
+                <li class="next {{currentYear==lastWorkingYear? 'disabled':''}}"><a href="" ng-click="next()">Next <span aria-hidden="true">&rarr;</span></a></li>
               </ul>
-              <span style="font-size:20px;">{{yearInView}}</span>
+              <span style="font-size:20px;">{{currentYear}}</span>
             </div>
             <!-- <span class="text-center">{{data.joiningDate}}</span> -->
             <table class="invoiceTable" style=" width: 100%;border-collapse: collapse;">
-              <tr ng-repeat ="n in months">
+              <tr ng-repeat ="n in monthsData">
                 <td><span>{{n}}</span></td>
               </tr>
-    
+
             </table>
 
           </div>
