changes in product inventory

--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -117,7 +117,7 @@
         <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;">
           <i class="fa fa-facebook fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
+        <!-- <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
           <i class="fa fa-pinterest fa-stack-1x"></i>
         </a>
         <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #55ACEE;color: white;border-radius: 50%;">
@@ -125,7 +125,7 @@
         </a>
         <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;">
           <i class="fa fa-linkedin fa-stack-1x"></i>
-        </a>
+        </a> -->
       </div>
       <div class="row">
         <span style="color:rgb(24, 89, 46)">Download Our App</span>
@@ -182,7 +182,7 @@
         <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;">
           <i style="font-size:12px;" class="fa fa-facebook fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
+        <!-- <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
           <i class="fa fa-pinterest fa-stack-1x"></i>
         </a>
         <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #55ACEE;color: white;border-radius: 50%;">
@@ -190,7 +190,7 @@
         </a>
         <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;">
           <i class="fa fa-linkedin fa-stack-1x"></i>
-        </a>
+        </a> -->
 
       </div>
         <div class="row">
