--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -1,7 +1,7 @@
 <div class="row bg-white ecomNav" style="height:10vh;width:100%;padding-top:8px;padding-bottom: 8px;position:fixed;z-index:10;border-bottom:2px solid #4db056">
 
   <div class="col-xs-2 text-center">
-    <img ng-click="$state.go('ecommerce')" src="/static/images/sterlin_select.png" style="height:7vh;cursor:pointer;" alt="">
+    <img ng-click="$state.go('ecommerce')" src="/static/images/sterlin_select.png" style="height:55px;cursor:pointer;" alt="">
   </div>
 
 
