--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -3,17 +3,17 @@
   <div class="row" ng-if="multiStores">
     <div class="col-md-4">
       <div class="container-fluid">
-        <h3> <label>Store: </label> {{store.name}}</h3>
+        <h3> <label>Store: </label> {{currentStore.name}}</h3>
       </div>
     </div>
     <div class="col-md-offset-4 col-md-4">
       <div class="container-fluid">
-        <button type="button" class="btn btn-primary pull-right" ng-click="selectStore(store.pk)">Change</button>
+        <button type="button" class="btn btn-primary pull-right" ng-click="selectStore(currentStore.pk)">Change</button>
       </div>
     </div>
   </div>
 
-  <div style="padding-right:10px;padding-left:10px;" id="dashboard">
+  <div ng-if="fetchInventory" style="padding-right:10px;padding-left:10px;" id="dashboard">
     <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction">
     </generic-Table>
   </div>
