changes in prod invent

--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -3,7 +3,7 @@
   <div class="row" ng-if="multiStores">
     <div class="col-md-4">
       <div class="container-fluid">
-        <h3> <label>Store: </label> {{currentStore.name}}</h3>
+        <h3> <label>Store: </label> {{currentStore.name}} - {{currentStore.pincode}}</h3>
       </div>
     </div>
     <div class="col-md-offset-4 col-md-4">
