--- a/HR/static/ngTemplates/app.HR.form.editPayroll.html
+++ b/HR/static/ngTemplates/app.HR.form.editPayroll.html
@@ -114,6 +114,26 @@
       <label >Bank Name</label>
       <input type="tel" class="form-control" ng-model="form.bankName" required placeholder="Bank Details">
     </div>
+    <div class="form-group">
+      <label >Pan</label>
+      <input type="text" class="form-control" ng-model="form.pan" required placeholder="PAN Number">
+    </div>
+    <div class="form-group">
+      <label >PF Account No</label>
+      <input type="text" class="form-control" ng-model="form.pfAccNo" required placeholder="PF Account Number">
+    </div>
+    <div class="form-group">
+      <label >PF Universal No</label>
+      <input type="text" class="form-control" ng-model="form.pfUniNo" required placeholder="PF Universal Number">
+    </div>
+    <div class="form-group">
+      <label >PF Amount</label>
+      <input type="number" class="form-control" ng-model="form.pfAmnt" required placeholder="PF Amount">
+    </div>
+    <div class="form-group">
+      <label >ESIC</label>
+      <input type="text" class="form-control" ng-model="form.esic" required placeholder="ESIC Number">
+    </div>
     <div class="col-md-6 text-left" style="margin-top: 27px;">
       <button ng-click="save()" type="button" class="btn btn-success">Save</button>
     </div>
