--- a/HR/static/ngTemplates/app.HR.form.userProfile.html
+++ b/HR/static/ngTemplates/app.HR.form.userProfile.html
@@ -24,6 +24,12 @@
           <input type="number" class="form-control" ng-model="data.empID" id="empID" placeholder="Employee ID">
         </div>
         <div class="form-group">
+          <label for="empID">Employement Type</label>
+          <select type="number" class="form-control" ng-model="data.empType" id="empID" placeholder="Employee ID">
+            <option value="full time">Full Time</option>
+            <option value="part time">Part Time</option>
+        </div>
+        <div class="form-group">
           <label style="margin-right:20px;">Prefix</label>
           <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Smt'">Miss.</label>
           <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Shri'">Mr.</label>
