--- a/payroll/static/ngTemplates/app.payroll.salary.report.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.report.html
@@ -4,10 +4,10 @@
     <div class="container-fluid">
       <h4>
         <div class="row">
-          <div class="col-md-1" ng-click="save(false)">
+          <div class="col-md-1" ng-click="save('save')">
             <span style="cursor:pointer"><i class="fa fa-floppy-o"></i> Save</span>
           </div>
-          <div class="col-md-2 text-center" ng-click="save(false)">
+          <div class="col-md-2 text-center" ng-click="save('submit')">
             <span style="cursor:pointer"><i class="fa fa-floppy-o"></i> submit</span>
           </div>
           <div class="col-md-1">
