--- a/payroll/static/ngTemplates/app.payroll.salary.reportexplore.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.reportexplore.html
@@ -1,8 +1,7 @@
-<div class="col-md-4 " style="padding:10px" ng-repeat="a in reportData">
+<!-- <div class="col-md-4 " style="padding:10px" ng-repeat="a in reportData">
   <div class="card" style="padding:10px;min-height:150px;">
       <span class="pull-left" style="font-size:20px">{{a.user |  getName}}</span>
       <div class="pull-right">
-        <!-- <span>{{months[a.month]}}</span> -->
         <span style="color:green;" ng-if="a.deffered == false"><i class="fa fa-circle" aria-hidden="true"></i></span>
         <span style="color:red;" ng-if="a.deffered == true"><i class="fa fa-circle" aria-hidden="true"></i></span>
       </div><br><br><br><br>
@@ -10,4 +9,30 @@
         <a style="cursor:pointer;" target="_blank" href="/api/payroll/getPayslip?payslip={{a.user}}"><i class="fa fa-download fa-3x text-right" ></i></a>
       </div>
   </div>
+</div> -->
+<div class="col-md-12 " style="padding:10px" >
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Amount</th>
+        <th>TDS</th>
+        <th>Total</th>
+        <th ng-if="data.status=='approved'">Download</th>
+      </tr>
+    </thaed>
+    <tbody>
+      <tr ng-repeat="a in data.payslips">
+        <td style="width:25.5%">{{a.user |  getName}}</td>
+        <td style="width:25.5%">{{a.amount}}</td>
+        <td style="width:25.5%">{{a.tds}}</td>
+        <td style="width:25.5%" >{{a.totalPayable}}</td>
+        <td ng-if="data.status=='approved'">
+          <div class="btn-group btn-group-sm">
+              <a style="cursor:pointer;" target="_blank" href="/api/payroll/getPayslip?payslip={{a.user}}&report={{data.pk}}"><i class="fa fa-download fa-3x text-right" ></i></a>
+            </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
