changes in prod inventory

--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -73,7 +73,7 @@
                 <div class="col-xs-5" style="padding-right:0px;">
                   <div class="input-group qtyInputGrp" ng-click="$event.stopPropagation();">
                     <span class="input-group-addon qtyBtn">Qty</span>
-                    <input type="text" class="form-control qtyText" name="qty" placeholder="Qty" ng-model="qtyToAddInit.qty">
+                    <input type="text" class="form-control qtyText" placeholder="Qty" ng-model="qtyToAddInit.qty">
                   </div>
                 </div>
                 <div class="col-xs-4" style="padding-left:10px;" ng-click="addToCart();$event.stopPropagation();">
