--- a/POS/static/ngTemplates/app.POS.invoice.item.html
+++ b/POS/static/ngTemplates/app.POS.invoice.item.html
@@ -1,24 +1,23 @@
 
 <div class="col-md-6">
-  <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;padding-bottom:10px" ng-controller="POS.invoice.item">
+  <div class="cards" style="border:0.5px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;padding-bottom:10px;height:15vh" ng-controller="POS.invoice.item">
     <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
       <div class="col-md-2 text-center" style="padding-top: 20px;">
-        <span style="font-size: 22px;">{{data.pk}}</span>
+        <span style="font-size: 30px;">{{data.pk}}</span>
       </div>
       <div class="col-md-8" style="margin-top:10px;">
         <div class="row col-md-11">
-          <span style="font-size: 18px;">{{data.customer.name}}</span><br>
+          <h3>{{data.customer.name}}</h3>
         </div>
         <div class="row" style="font-size: 12px;">
-          <div class="col-md-6">
+          <div class="col-md-12">
             <!-- <span style="font-size: 18px;">{{data.customer.name}}</span><br> -->
-            <span>Due Date : {{data.duedate | date:'dd MMM yyyy'}}</span><br>
-            <span>Recieved : {{data.amountRecieved}}</span>
+            <span><strong>Due Date : </strong>{{data.duedate | date:'dd MMM yyyy'}}</span><br>
+            <span><strong>Recieved : </strong>{{data.amountRecieved}}</span><br>
+            <span><strong>Payment Mode : </strong>{{data.modeOfPayment}}</span><br>
+            <span><strong>Total Amount : </strong>{{data.grandTotal}}</span>
           </div>
-          <div class="col-md-6">
-            <span>Payment Mode : {{data.modeOfPayment}}</span><br>
-            <span>Total Amount : {{data.grandTotal}}</span>
-          </div>
+
           <!-- <div class="col-md-1 " ng-if="hover">
             <div class="row">
               <span><i class="fa fa-info" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="rowActionClicked('info')"></i>
@@ -31,7 +30,7 @@
           </div> -->
         </div>
       </div>
-      <div class="col-md-2 text-center" ng-if="hover" style="padding-top:10px;">
+      <div class="col-md-2 text-center" ng-if="hover" style="padding-top:20px;">
         <div class="row">
           <span><i class="fa fa-info" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="rowActionClicked('info')"></i>
           </span>
