--- a/POS/static/ngTemplates/app.POS.productMeta.item.html
+++ b/POS/static/ngTemplates/app.POS.productMeta.item.html
@@ -8,24 +8,29 @@
       <hr>
     <div class="row">
         <!-- Service Type:<strong>{{data.hsn}}</strong>  <br> -->
-        <div class="col-md-8">
+        <div class="col-md-12">
           Tax Code : <strong>{{data.code}}</strong><br>
           Tax Rate : <strong>{{data.taxRate}}</strong>
         </div>
-        <div class="col-md-2">
-          <i class="fa fa-pencil fa-lg " style="position:absolute;right:20px;bottom:-10px;cursor:pointer;" ng-click = "rowActionClicked('edit')"></i>
-        </div>
-        <div class="col-md-2">
-          <i mwl-confirm
-          title="Confirm"
-          message="Are you sure?"
-          confirm-text="Yes <i class='fa fa-check'></i>"
-          cancel-text="No"
-          on-confirm="rowActionClicked('delete')"
-          confirm-button-type="danger"
-          cancel-button-type="default" class="fa fa-trash fa-lg" style="position:absolute;right:20px;bottom:-10px;cursor:pointer;"></i>
-        </div>
 
+
+    </div>
+    <div class="row" style="padding-left:10px;padding-top:30px">
+      <div class="col-md-2">
+        <i class="fa fa-pencil fa-lg " style="position:absolute;right:20px;bottom:-10px;cursor:pointer;" ng-click = "rowActionClicked('edit')"></i>
+      </div>
+        <div class="col-md-8">
+        </div>
+      <div class="col-md-2">
+        <i mwl-confirm
+        title="Confirm"
+        message="Are you sure?"
+        confirm-text="Yes <i class='fa fa-check'></i>"
+        cancel-text="No"
+        on-confirm="rowActionClicked('delete')"
+        confirm-button-type="danger"
+        cancel-button-type="default" class="fa fa-trash fa-lg" style="position:absolute;right:20px;bottom:-10px;cursor:pointer;"></i>
+      </div>
     </div>
   </div>
 </div>
