--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.listings.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.listings.item.html
@@ -5,21 +5,30 @@
       <div class="col-md-2" style="padding:0px;">
         <img style="width: 100% " class="img" ng-src="{{data.files[0].attachment}}" >
       </div>
-      <div class="col-md-10" style="position:relative;display:block;">
+      <div class="col-md-5" style="position:relative;display:block;">
         <div class="row" style="padding-left:10px;">
-          <span class="text-muted" style="position:absolute; top:10px;right:10px;">
+          <!-- <span class="text-muted" style="position:absolute; top:10px;right:10px;">
             <i class="fa fa-hashtag"></i> <span style="font-size:20px;">{{data.pk}}</span>
-          </span><br>
+          </span><br> -->
           <h3>{{data.product.name}}</h3>
         </div>
-        <div class="row" ng-if="insight.inStock.inStock__sum">
+      </div>
+      <div class="col-md-5" style="position:relative;display:block;">
+        <div class="row" style="padding-left:10px;">
+          <h4><strong>SKU : </strong>{{data.product.serialNo}}</h4>
+          <h4><strong>Price : </strong>{{data.product.price}}</h4>
+          <h4><strong>Discount : </strong>{{data.product.discount}}%</h4>
+          <h4><strong>Unit : </strong>{{data.product.unit}}</h4>
+        </div>
+
+        <!-- <div class="row" ng-if="insight.inStock.inStock__sum">
           <span style="position:absolute;right:10px;bottom:-45px;" class="text-muted">
             <span class="text-muted">Starts from </span><span style="font-size:25px;margin-left:20px;"><i class="fa fa-inr"></i>{{insight.lowestRate.rate__min}}</span>
             <span ng-if="data.priceModel=='time'">/ per Hour</span>
             <span ng-if="data.priceModel=='quantity'">/ per Piece</span>
             <span ng-if="data.priceModel=='weight'">/ per Kg</span>
           </span>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="row container-fluid" style="padding-top:10px;">
