--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.item.html
@@ -1,4 +1,4 @@
-<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" >
+<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;"  ng-click="rowActionClicked('info')">
   <div class="container-fluid card" style="padding-bottom:10px;">
     <div class="row" style="border-bottom: 1px solid #dedede;">
       <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
@@ -10,7 +10,7 @@
         <strong>Shopping :</strong> {{data.modeOfShopping}} <br>
         <strong>Order City :</strong> {{data.city}} <br>
         <strong>Order State :</strong> {{data.state}} <br>
-        <span class="pull-right" ><i class="fa fa-info-circle fa-2x" ng-click="rowActionClicked('info')" style="cursor:pointer"></i></span>
+        <!-- <span class="pull-right" ><i class="fa fa-info-circle fa-2x" style="cursor:pointer"></i></span> -->
       </div>
     </div>
   </div>
