--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -23,40 +23,42 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-1">
+      <div class="col-md-2 text-center">
         <h4><label>No</label></h4>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
         <h4><label>Product</label></h4>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 text-center">
         <h4><label>Quantity</label></h4>
+      </div>
+      <div class="col-md-3 text-center">
+        <h4><label>Edit</label></h4>
       </div>
     </div>
   </div>
 
   <div class="container-fluid" style="margin-top:15px;" ng-repeat="pi in prodInventories">
-    <div class="card">
+    <div class="card" ng-click="toggle($index)">
       <div class="row container-fluid">
-        <div class="col-md-1">
+        <div class="col-md-2 text-center">
           <h4>{{$index+1}}</h4>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
           <h4>{{pi.product.name}} {{pi.some}}
-
             <!-- <span ng-if="data.productVariant==null"> {{data.product.howMuch | convertUnit: data.product.unit}} </span> -->
             <!-- <span ng-if="data.productVariant"> {{data.productVariant.unitPerpack * data.product.howMuch | convertUnit: data.product.unit}} </span> -->
            </h4>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3 text-center">
           <h4>{{pi.quantity}}</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 text-center">
           <!-- <h4><label>Product Variant : </label> {{data.productVariant}}</h4> -->
           <div class="row" style="margin:10px 0px;">
             <div class="btn-group">
               <button type="button" class="btn btn-default" ng-click="editQuantity($index)">Edit</button>
-              <button type="button" class="btn btn-default" ng-click="toggle($index)">Info</button>
+              <!-- <button type="button" class="btn btn-default" ng-click="toggle($index)">Info</button> -->
               <!-- <button type="button" class="btn btn-default" ng-click="rowActionClicked('editMaster')">Edit Master</button> -->
             </div>
           </div>
@@ -64,7 +66,7 @@
         </div>
       </div>
       <div class="row container-fluid" ng-if="pi.open">
-        <div class="col-md-offset-2 col-md-3">
+        <div class="col-md-offset-2 col-md-3 text-center">
             <h4>{{pi.product.name}}
               <span ng-if="pi.productVariant==null"> {{pi.product.howMuch | convertUnit: pi.product.unit}} </span>
               <span ng-if="pi.productVariant"> {{pi.productVariant.unitPerpack * pi.product.howMuch | convertUnit: pi.product.unit}} </span>
